<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Symptom Management</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_incorrect_username_or_password">The password or username is incorrect</string>
    <string name="error_server">There seems to be something wrong with the server, please try again later</string>

    <!-- Patient main activity -->
    <string name="welcome_patient">Welcome patient %1$s, you have token %2$s</string>
    <string name="welcome_doctor">Welcome doctor %1$s, you have token %2$s</string>
    <string name="action_settings">Settings</string>
    <string name="patient_start_btn">Start</string>
    <string name="patient_welcome_txt">Welcome to the symptom management app %1$s</string>
    <string name="patient_howto_txt">Begin by pressing the "Start"-button below</string>
    <string name="patient_question_medication">Did you take your %1$s?</string>
    <string name="patient_answer_yes">Yes</string>
    <string name="patient_answer_no">No</string>
    <string name="patient_check_in_summary_title">Summary</string>
    <string name="patient_check_in_summary_submit">Submit and close app</string>
    <string name="patient_check_in_summary_desc">Go through your check-in. If all is correct, press the submit button and close this app</string>
    <string name="patient_check_in_summary_questions_text">Questions</string>
    <string name="patient_check_in_summary_medications_text">Pain medications</string>
    <string name="patient_check_in_medications_question">Did you take your pain medication?</string>

    <!-- Doctor main activity -->
    <string name="doctor_patient_alerts_title">Alerts</string>
    <string name="doctor_patient_check_ins_title">Check-ins</string>
    <string name="doctor_patient_medications_title">Medication</string>
    <string name="doctor_patient_status_ok_title">Good</string>
    <string name="doctor_patient_status_alert_title">Alerts</string>
    <string name="doctor_patient_status_ok_text">No problems</string>
    <string name="doctor_patient_no_check_ins">No check-ins found</string>
    <string name="doctor_search_patients_no_results">No patients found</string>
    <string name="doctor_search_menu_title">Search patients</string>

    <!-- Update medications fragment -->
    <string name="update_medications_ok_btn">Update</string>
    <string name="update_medications_success">Patient medication plan has been updated</string>

    <!-- Patient preferences -->
    <string name="pref_user_title">My Information</string>
    <string name="pref_alarms_title">My Reminders</string>
    <string name="pref_title_alarms">Reminders</string>
    <string name="pref_title_patient_name">Name</string>
    <string name="pref_title_patient_dob">Date of birth</string>
    <string name="pref_title_patient_medical_no">Medical record no</string>
    <string name="pref_title_patient_doctor_name">My doctor</string>

    <!-- Patient notification -->
    <string name="alarm_notification_title">Time for check-in</string>
    <string name="alarm_notification_msg">Click to answer the questions</string>

    <!-- Time picker dialog -->
    <string name="timepicker_cancel_btn">Cancel</string>
    <string name="timepicker_ok_btn">Set</string>
    <string name="title_activity_doctor_patient_details_fragment">Patient details</string>

</resources>
