<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_user_title">
        <org.coursera.capstone.android.preference.PatientPreference
            android:key="pref_name"
            android:selectable="false"
            android:title="@string/pref_title_patient_name" />
        <org.coursera.capstone.android.preference.PatientPreference
            android:key="pref_dob"
            android:selectable="false"
            android:title="@string/pref_title_patient_dob" />
        <org.coursera.capstone.android.preference.PatientPreference
            android:key="pref_medical_record_no"
            android:selectable="false"
            android:title="@string/pref_title_patient_medical_no" />
        <org.coursera.capstone.android.preference.PatientPreference
            android:key="pref_patient_doctor_name"
            android:selectable="false"
            android:title="@string/pref_title_patient_doctor_name" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_alarms_title">
        <!-- Here we add preferences programmatically in PatientSettingsFragment -->
    </PreferenceCategory>

</PreferenceScreen>