<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.coursera.capstone.android.fragment.WelcomePatientFragment">

    <TextView
        android:id="@+id/welcome_patient_title"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/text_h1"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/patient_welcome_txt" />
    <TextView
        android:layout_below="@id/welcome_patient_title"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/text_normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/patient_howto_txt" />


    <Button
        android:layout_marginTop="@dimen/activity_vertical_margin"
        style="@style/GreenButton"
        android:id="@+id/patient_next_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/patient_start_btn"/>


</RelativeLayout>
